--- a/mtgalib/mtgalib.csproj
+++ b/mtgalib/mtgalib.csproj
@@ -47,7 +47,10 @@
     <Compile Include="Credentials.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="MtgAPI.cs" />
+    <Compile Include="DeprecatedMtgaServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TcpConnection.cs" />
+    <Compile Include="TcpConnectionCloseType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
