--- a/mtgalib/mtgalib.csproj
+++ b/mtgalib/mtgalib.csproj
@@ -44,16 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Credentials.cs" />
+    <Compile Include="MtgAssetsEndpoint.cs" />
+    <Compile Include="Player\PlayerCredentials.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="MtgAPI.cs" />
     <Compile Include="DeprecatedMtgaServer.cs" />
+    <Compile Include="Player\PlayerEnvironment.cs" />
+    <Compile Include="Player\PlayerEnvironmentType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TcpConnection.cs" />
-    <Compile Include="TcpConnectionCloseType.cs" />
+    <Compile Include="Server\MtgaServer.cs" />
+    <Compile Include="Server\TcpConnection.cs" />
+    <Compile Include="Server\TcpConnectionCloseType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
