--- a/mtgalib/mtgalib.csproj
+++ b/mtgalib/mtgalib.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -53,7 +53,7 @@
     <Compile Include="Player\PlayerEnvironment.cs" />
     <Compile Include="Player\PlayerEnvironmentType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server\JsonResponse.cs" />
+    <Compile Include="Server\JsonRpcResponse.cs" />
     <Compile Include="Server\MtgaServer.cs" />
     <Compile Include="Server\ServerErrorCode.cs" />
     <Compile Include="Server\TcpConnection.cs" />
