--- a/mtgalib/mtgalib.csproj
+++ b/mtgalib/mtgalib.csproj
@@ -55,8 +55,8 @@
     <Compile Include="Player\PlayerEnvironmentType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\JsonRpcResponse.cs" />
-    <Compile Include="Server\MtgaServer.cs" />
-    <Compile Include="Server\ServerErrorCode.cs" />
+    <Compile Include="Server\GameServer.cs" />
+    <Compile Include="Server\GameServerErrorCode.cs" />
     <Compile Include="Server\TcpConnection.cs" />
     <Compile Include="Server\TcpConnectionCloseType.cs" />
     <Compile Include="Version.cs" />
